we got multiple mana types babyyyy